# latern_link

./: .gitignore  LICENSE  README.md  l10n.yaml  pubspec.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app_state/: initial.dart  success.dart  success_converter.dart
lib/config/: app_config.dart  app_paths.dart  app_routes.dart  route_change_notifier.dart  themes.dart
lib/config/localizations/: language_code_constants.dart  localization_service.dart
lib/l10n/: app_en.arb  app_vi.arb
lib/utils/: navigation_utils.dart  responsive.dart  secure_storage.dart
lib/widgets/: app_layout.dart  theme_builder.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: api.rs  frb_generated.rs  lib.rs
rust/src/platform/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_latern_link.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_latern_link.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  runner.exe.manifest
(+24 files in other folders)
