[package]
name = "rust_lib_latern_link"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
home = "0.5.9"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
